--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-preset-es2015-optimized",
-  "version": "6.11.5",
+  "version": "6.11.6",
   "description": "Babel preset for all es2015-webpack plugins, with loose mode enabled where available.",
   "homepage": "https://babeljs.io/",
   "author": "Andrew Laiff \"q.laiff@gmail.com\"",
@@ -18,10 +18,10 @@
     "modify-babel-preset": "^1.0.0"
   },
   "peerDependencies": {
-    "babel-preset-es2015": "*"
+    "babel-preset-es2015-loose": "*"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-es2015-loose": "^6.3.13",
     "tap-spec": "^4.1.1",
     "tape": "^4.4.0"
   }
